test/errors/classes/class_constructor_uninitialized_field_fail.hy
// EXPECT_DIAGNOSTIC: Constructor for class 'Incomplete' must initialize member 'b'
class Incomplete
{
    int a
    int b

    Incomplete(int a)
    {
        this.a = a
    }
}

// expect: Constructor for class 'Incomplete' must initialize member 'b'
